--- a/about.html
+++ b/about.html
@@ -1,12 +1,19 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     denemeye devam
-    
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, illo quaerat aliquid blanditiis quis totam
+    cupiditate ab neque alias adipisci magnam commodi amet. Beatae est cupiditate quasi saepe, recusandae reprehenderit?
+    shift + ALT + F (lorem bir kac satırla alt alta yazılıyor)
+
+    bir versiyon için deneme
 </body>
+
 </html>
