--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
     mustafa branch den selamlar
     && bunuda deneyelim masterdan selmlar
-=======
     bakalım bu sefer branchden selam olacakmı
     mustafa branch den selamlar
->>>>>>> mustafa
+    mustafa yeni deneme,
+    
 </body>
 </html>
