--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, illo quaerat aliquid blanditiis quis totam
     cupiditate ab neque alias adipisci magnam commodi amet. Beatae est cupiditate quasi saepe, recusandae reprehenderit?
     shift + ALT + F (lorem bir kac satırla alt alta yazılıyor)
+    github dan ekleme yaptım
 
     bir versiyon için deneme
 </body>
